adding kafka producer unit test Adding dependency in build.gradle