@@ -54,6 +54,54 @@ dependencies {
   // https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
 //compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.3.0'
   implementation 'org.apache.kafka:kafka-clients:2.3.0'
+    implementation 'org.apache.kafka:kafka_2.12:2.3.0'
+  //testImplementation 'org.springframework:spring-test:3.2.2.RELEASE'
+  // https://mvnrepository.com/artifact/org.springframework/spring-test
+   //compile group: 'org.springframework', name: 'spring-test', version: '5.1.3.RELEASE'
   
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  // https://mvnrepository.com/artifact/org.testng/testng
+  compile group: 'org.testng', name: 'testng', version: '6.14.3'
+
+   testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.3.RELEASE'
+  
+  
+  testImplementation 'org.springframework.boot:spring-boot-starter'
+  testImplementation 'org.springframework.boot:spring-boot-starter-log4j2'
+  testImplementation 'org.apache.kafka:kafka-clients:2.3.0'
+  
+  // https://mvnrepository.com/artifact/org.testng/testng
+  //testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+
+  //testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+
+
+
+test {
+
+	useTestNG()
+	include 'org.arijit.test/**'
+	exclude 'org.arijit.kafka/**'
+	
+	testLogging.showStandardStreams = true
+
+   // set heap size for the test JVM(s)
+   minHeapSize = "128m"
+   maxHeapSize = "512m"
+
+   // set JVM arguments for the test JVM(s)
+   jvmArgs '-XX:MaxPermSize=256m'
+   
+   // listen to events in the test execution lifecycle
+   beforeTest { 
+      descriptor -> logger.lifecycle("Running test: " + descriptor)
+   }
+
+   // listen to standard out and standard error of the test JVM(s)
+   onOutput { 
+      descriptor, event -> logger.lifecycle
+         ("Test: " + descriptor + " produced standard out/err: " 
+         + event.message )
+   }
 }
